# wow-char-rng

./: .gitignore  Cargo.toml  README.md  index.html  main.scss
src/: main.rs  state.rs
src/components/: item.rs
src/data/: mod.rs
