[package]
name = "wow-char-rng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/" }
gloo = "0.6"
gloo-utils = "0.1"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
    "CssStyleDeclaration",
    "HtmlElement"
]
